modified:   1-products/.DS_Store modified:   jogano.css modified:   jogano.html modified:   jogano.js

--- a/jogano.html
+++ b/jogano.html
@@ -6,8 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+		<div class="hamburger">&#9776; </div>
+		<button class="cross">&#735;</button> 
+
 	<div class="navigation">
-		<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt=""> 
+		<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
       <a href="https://wangx733.github.io/jogano/products.html" class="products"> Products
       </a>
@@ -17,6 +21,30 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about"> About
       </a>
+      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <div class="gang lang">|</div>
+      <a href="" class="cn lang">中文</a>
 </div>
 
+	<div class="navi2">
+		   <a href="https://wangx733.github.io/jogano/products.html" class="products"> Products
+      </a>
+
+      <a href="https://wangx733.github.io/jogano/events.html" class="events"> Events
+      </a>
+
+      <a href="https://wangx733.github.io/jogano/About.html" class="about"> About
+      </a>
+      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <div class="gang lang">|</div>
+      <a href="" class="cn lang">中文</a>
+      <div class="naviline2">
+	</div>
+	</div>
+<div class="naviline">
+	</div>
+
 </body>
+
+
+
