modified:   jogano.css modified:   jogano.html

--- a/jogano.html
+++ b/jogano.html
@@ -8,18 +8,18 @@
 <body>
 
 		<div class="hamburger">&#9776; </div>
-		<button class="cross">&#735;</button> 
+		<div class="cross">&#735;</div> 
 
 	<div class="navigation">
 		<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products"> Products
+      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events"> Events
+      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about"> About
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -27,13 +27,13 @@
 </div>
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="products"> Products
+		   <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events"> Events
+      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about"> About
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
       <div class="gang lang">|</div>
