modified:   jogano.css modified:   jogano.html

--- a/jogano.html
+++ b/jogano.html
@@ -44,6 +44,9 @@
 <div class="naviline">
 	</div>
 
+<div class="price">￥400</div>
+<div class="p-name">Chateau val de roc 2010
+</div>
 </body>
 
 
