modified:   jogano.css modified:   jogano.html

--- a/jogano.html
+++ b/jogano.html
@@ -11,6 +11,7 @@
 		<div class="cross">&#735;</div> 
 
 	<div class="navigation">
+
 		<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
       <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
@@ -47,7 +48,21 @@
 <div class="price">￥400</div>
 <div class="p-name">Chateau val de roc 2010
 </div>
+<div class="alchol">13.5%</div>
+<div class="description"></div>
+
+
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" 
+          src="jogano.js"> </script>
 </body>
+</html>
+
+
+
+
+
 
 
 
