modified:   jogano.css modified:   jogano.html

--- a/jogano.html
+++ b/jogano.html
@@ -9,10 +9,9 @@
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
+<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
 	<div class="navigation">
-
-		<img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
       <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
       </a>
@@ -28,22 +27,21 @@
 </div>
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+		   <a href="https://wangx733.github.io/jogano/products.html" class="products navi2"> PRODUCTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/events.html" class="events navi2"> EVENTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2"> ABOUT
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
-      <div class="gang lang">|</div>
-      <a href="" class="cn lang">中文</a>
-      <div class="naviline2">
+      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <div class="gang lang2">|</div>
+      <a href="" class="cn lang2">中文</a>
+      <div class="naviline2"></div>
 	</div>
-	</div>
-<div class="naviline">
-	</div>
+	
+<div class="naviline"> </div>
 
 <div class="price">￥400</div>
 <div class="p-name">Chateau val de roc 2010
@@ -55,7 +53,7 @@
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" 
-          src="jogano.js"> </script>
+          src="https://wangx733.github.io/jogano/jogano.js"> </script>
 </body>
 </html>
 
