modified:   jogano.html new file:   jquery-3.1.1.js

--- a/jogano.html
+++ b/jogano.html
@@ -9,6 +9,7 @@
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
+		
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
 	<div class="navigation">
@@ -40,7 +41,7 @@
       <a href="" class="cn lang2">中文</a>
       <div class="naviline2"></div>
 	</div>
-	
+
 <div class="naviline"> </div>
 
 <div class="price">￥400</div>
@@ -51,7 +52,7 @@
 
 
 
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
   <script type="text/javascript" 
           src="https://wangx733.github.io/jogano/jogano.js"> </script>
 </body>
