modified:   jogano.html modified:   jogano.js

--- a/jogano.html
+++ b/jogano.html
@@ -9,7 +9,7 @@
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
-		
+
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
 	<div class="navigation">
@@ -46,10 +46,23 @@
 
 <div class="price">￥400</div>
 <div class="p-name">Chateau val de roc 2010
-</div>
-<div class="alchol">13.5%</div>
-<div class="description"></div>
 
+<div class="alchol">13.5%</div>
+</div>
+<div class="description"></div>
+<img class="photo" src="https://wangx733.github.io/jogano/1-products/6-valderoc.png">
+<div class="grape">
+	<img class="icon" src="https://wangx733.github.io/jogano/icon-grape.png">
+<div class="grapenum">
+70% <br>
+20% <br>
+10% </div>
+<div class="grapecompo">
+	Merlot<br>
+Cabernet Sauvignon<br>
+Cabernet Franc</div>
+
+</div>
 
 
 <script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
