--- a/6.html
+++ b/6.html
@@ -10,6 +10,8 @@
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
 
+<div class="tobuy">Click to buy</div>
+
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
 	<div class="navigation">
@@ -26,17 +28,16 @@
       <div class="gang lang">|</div>
       <a href="" class="cn lang">中文</a>
 </div>
-
 <div clss="navigationblock"></div>
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="products navi2"> PRODUCTS
+		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
@@ -46,13 +47,17 @@
 
 <div class="naviline"> </div>
 
+
 <div class="price">￥400</div>
 <div class="p-name">Chateau val de roc 2010
+
 
 <div class="alchol">13.5%</div>
 </div>
 <div class="description"></div>
 <img class="photo" src="https://wangx733.github.io/jogano/1-products/6-valderoc.png">
+
+
 
 <div class="grape">
 	<img class="icon" src="https://wangx733.github.io/jogano/icon-grape.png">
@@ -74,7 +79,7 @@
 		<div class="notes">
 	<h2>Notes</h2>
 Savory and a touch smoky, this wine boasts good structure and supple texture. A black fruit core of plums and raspberries, dappled with sweet spice, balance game meat notes on the long finish. Would pair well with slow roasted, garlic and herb lamb leg, or grilled cocoa-and-spice rubbed pork chops.
-<br>
+<br><br><br><br>
 
 
 
