--- a/6.html
+++ b/6.html
@@ -10,8 +10,6 @@
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
 
-<div class="tobuy">Click to buy</div>
-
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 
 	<div class="navigation">
@@ -28,7 +26,7 @@
       <div class="gang lang">|</div>
       <a href="" class="cn lang">中文</a>
 </div>
-<div clss="navigationblock"></div>
+
 
 	<div class="navi2">
 		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
@@ -46,16 +44,16 @@
 	</div>
 
 <div class="naviline"> </div>
+<a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-
-<div class="price">￥400</div>
+<div class="price">￥268</div>
 <div class="p-name">Chateau val de roc 2010
-
 
 <div class="alchol">13.5%</div>
 </div>
-<div class="description"></div>
 <img class="photo" src="https://wangx733.github.io/jogano/1-products/6-valderoc.png">
+
+<a href="" class="tobuy">Click to buy</a>
 
 
 
