modified:   jogano.css modified:   product.html new file:   product/.DS_Store renamed:    projects/1.html -> product/1.html renamed:    projects/6.html -> product/6.html renamed:    projects/product.css -> product/product.css

--- a/product.html
+++ b/product.html
@@ -9,8 +9,9 @@
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
-
+<a href="https://wangx733.github.io/jogano/home.html">
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
+</a>
 
 	<div class="navigation">
 
@@ -44,11 +45,62 @@
 	</div>
 
 <div class="naviline"> </div>
-<a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
+
+<div class="box">
+
+<a href="https://wangx733.github.io/jogano/product/1.html" class="items">
+<div class="redwine"></div>
+<div class="pricee">¥ 99</div>
+<img src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png" class="image" >
+<h1>BACHEVILLAIN </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
 
 
 
 
+
+<a href="https://wangx733.github.io/jogano/product/2.html" class="items">
+<div class="redwine"></div>
+<div class="pricee">¥ 88</div>
+<img src="https://wangx733.github.io/jogano/1-products/2-lostpara.png" class="image" >
+<h1>Lost Paradise </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/3.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 499</div>
+<img src="https://wangx733.github.io/jogano/1-products/3-gaudin.png" class="image" >
+<h1>CHATEAU.GAUDIN  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/4.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 358</div>
+<img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
+<h1>Chateau Du Tailhas  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+</div>
 
 <script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
   <script type="text/javascript" 
