--- a/product/6.html
+++ b/product/6.html
@@ -9,8 +9,10 @@
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
-
+    
+<a href="https://wangx733.github.io/jogano/home.html">
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
+</a>
 
 	<div class="navigation">
 
@@ -46,14 +48,14 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="price">￥99</div>
-<div class="p-name">Bachevillain
+<div class="price">￥268</div>
+<div class="p-name">Chateau val de roc 2010
 
-<div class="alchol">14.0 %</div>
+<div class="alchol">13.5%</div>
 </div>
-<img class="photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+<img class="photo" src="https://wangx733.github.io/jogano/1-products/6-valderoc.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="tobuy">Click to buy</a>
+<div class="tobuy grey">Sold Out</div>
 
 
 
@@ -61,9 +63,9 @@
 	<img class="icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
 <div class="grapenum">
-83% <br>
-14% <br>
-3% 
+70% <br>
+20% <br>
+10% 
 <br>
 	
     <div class="region-description">
@@ -73,10 +75,10 @@
 	
 	<div class="pair-description">
 		<img class="icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Veal, Game (deer, venison), Poultry
+		Beef, Lamb, Cheese, Baked vegetable
 		<div class="notes">
 	<h2>Notes</h2>
-A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+Savory and a touch smoky, this wine boasts good structure and supple texture. A black fruit core of plums and raspberries, dappled with sweet spice, balance game meat notes on the long finish. Would pair well with slow roasted, garlic and herb lamb leg, or grilled cocoa-and-spice rubbed pork chops.
 <br><br><br><br>
 
 
