modified:   jogano.css modified:   jogano.js modified:   product.html

--- a/product.html
+++ b/product.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+
+
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
 <a href="https://wangx733.github.io/jogano/home.html">
@@ -45,10 +47,57 @@
 	</div>
 
 <div class="naviline"> </div>
+<div class="filter">
+  <h2>TYPE</h2>
+  <input type="checkbox" value="red" id="red" />
+        <label for="red">Red</label>
+        <br>
+  <input type="checkbox" value="white" id="white" />
+        <label for="red">White</label>
+
+  <h2>PRICE</h2>
+ <input type="checkbox" value="p0" id="p0" />
+        <label class="lato" for="p0">¥&#160;&#160;&#160;&#160;&#160;&#160;&#160;0 - 100</label>
+        <br>
+ <input type="checkbox" value="p100" id="p100" />
+        <label class="lato" for="p100">¥ 100 - 200</label>
+        <br>
+  <input type="checkbox" value="p200" id="p200" />
+        <label class="lato" for="p200">¥ 200 - 350</label>
+        <br>
+ <input type="checkbox" value="p350" id="p350" />
+        <label class="lato" for="p350"> ¥ &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; >350</label>
+
+  <h2>REGION</h2>
+ <input type="checkbox" value="burgendy" id="burgendy" />
+        <label  for="burgendy">Burgendy</label>
+        <br>
+ <input type="checkbox" value="bordeaux" id="bordeaux" />
+        <label for="bordeaux">Bordeaux</label>
+        <br>
+  <input type="checkbox" value="cahors" id="cahors" />
+        <label for="p200">Cahors</label>
+
+ <h2>BODY</h2>
+ <input type="checkbox" value="light" id="light" />
+        <label  for="light">Light</label>
+        <br>
+ <input type="checkbox" value="medium" id="medium" />
+        <label for="medium">Medium</label>
+        <br>
+  <input type="checkbox" value="high" id="high" />
+        <label for="high">High</label>
+
+</div>
+
+
+
+
+
 
 <div class="box">
 
-<a href="https://wangx733.github.io/jogano/product/1.html" class="items">
+<a href="https://wangx733.github.io/jogano/product/1.html" class="items red">
 <div class="redwine"></div>
 <div class="pricee">¥ 99</div>
 <img src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png" class="image" >
