modified:   .DS_Store modified:   jogano.js modified:   product.html renamed:    product/.DS_Store -> projects/.DS_Store renamed:    product/1.html -> projects/1.html renamed:    product/6.html -> projects/6.html renamed:    product/product.css -> projects/jogano.css

--- a/product.html
+++ b/product.html
@@ -113,7 +113,7 @@
 
 
 
-<a href="https://wangx733.github.io/jogano/product/2.html" class="items">
+<a href="https://wangx733.github.io/jogano/product/2.html" class="items red">
 <div class="redwine"></div>
 <div class="pricee">¥ 88</div>
 <img src="https://wangx733.github.io/jogano/1-products/2-lostpara.png" class="image" >
@@ -125,7 +125,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/3.html" class="items">
+<a href="https://wangx733.github.io/jogano/product/3.html"  class="items red">
   <div class="redwine"></div>
 <div class="pricee">¥ 499</div>
 <img src="https://wangx733.github.io/jogano/1-products/3-gaudin.png" class="image" >
