modified:   jogano.css modified:   jogano.js modified:   product.html

--- a/product.html
+++ b/product.html
@@ -76,7 +76,7 @@
         <label for="bordeaux">Bordeaux</label>
         <br>
   <input type="checkbox" value="cahors" id="cahors" />
-        <label for="p200">Cahors</label>
+        <label for="cahors">Cahors</label>
 
  <h2>BODY</h2>
  <input type="checkbox" value="light" id="light" />
