modified:   jogano.css modified:   jogano.js modified:   product.html new file:   projects/2.html

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+<div class="navigationblock"></div>
 
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
@@ -47,7 +47,51 @@
 	</div>
 
 <div class="naviline"> </div>
+<div class="apply">Filter</div>
 <div class="filter">
+  <h2>TYPE</h2>
+  <input type="checkbox" value="red" id="red" />
+        <label for="red">Red</label>
+        <br>
+  <input type="checkbox" value="white" id="white" />
+        <label for="red">White</label>
+
+  <h2>PRICE</h2>
+ <input type="checkbox" value="p0" id="p0" />
+        <label class="lato" for="p0">¥&#160;&#160;&#160;&#160;&#160;&#160;&#160;0 - 100</label>
+        <br>
+ <input type="checkbox" value="p100" id="p100" />
+        <label class="lato" for="p100">¥ 100 - 200</label>
+        <br>
+  <input type="checkbox" value="p200" id="p200" />
+        <label class="lato" for="p200">¥ 200 - 350</label>
+        <br>
+ <input type="checkbox" value="p350" id="p350" />
+        <label class="lato" for="p350"> ¥ &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; >350</label>
+
+  <h2>REGION</h2>
+ <input type="checkbox" value="burgendy" id="burgendy" />
+        <label  for="burgendy">Burgendy</label>
+        <br>
+ <input type="checkbox" value="bordeaux" id="bordeaux" />
+        <label for="bordeaux">Bordeaux</label>
+        <br>
+  <input type="checkbox" value="cahors" id="cahors" />
+        <label for="cahors">Cahors</label>
+
+ <h2>BODY</h2>
+ <input type="checkbox" value="light" id="light" />
+        <label  for="light">Light</label>
+        <br>
+ <input type="checkbox" value="medium" id="medium" />
+        <label for="medium">Medium</label>
+        <br>
+  <input type="checkbox" value="high" id="high" />
+        <label for="high">High</label>
+
+</div>
+
+<div class="filter2">
   <h2>TYPE</h2>
   <input type="checkbox" value="red" id="red" />
         <label for="red">Red</label>
@@ -112,7 +156,6 @@
 
 
 
-
 <a href="https://wangx733.github.io/jogano/product/2.html" class="items red">
 <div class="redwine"></div>
 <div class="pricee">¥ 88</div>
@@ -125,11 +168,13 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/3.html"  class="items red">
+
+
+<a href="https://wangx733.github.io/jogano/product/4.html" class="items">
   <div class="redwine"></div>
-<div class="pricee">¥ 499</div>
-<img src="https://wangx733.github.io/jogano/1-products/3-gaudin.png" class="image" >
-<h1>CHATEAU.GAUDIN  </h1>
+<div class="pricee">¥ 358</div>
+<img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
+<h1>Chateau Du Tailhas  </h1>
 <div class="introo">
   <h3>14.0%</h3>
   <h3>Blend</h3>
@@ -137,11 +182,234 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/4.html" class="items">
+<a href="https://wangx733.github.io/jogano/product/7.html" class="items">
   <div class="redwine"></div>
-<div class="pricee">¥ 358</div>
-<img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
-<h1>Chateau Du Tailhas  </h1>
+<div class="pricee">¥ 256</div>
+<img src="https://wangx733.github.io/jogano/1-products/7-cuveeflamme.png" class="image" >
+<h1>Cuvée Flamme Brut  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/8.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 256</div>
+<img src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png" class="image" >
+<h1>Cuvée Flamme Rosé  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/9.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 369</div>
+<img src="https://wangx733.github.io/jogano/1-products/9-haute.png" class="image" >
+<h1>CCH. DE Haut Serre  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/10.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 208</div>
+<img src="https://wangx733.github.io/jogano/1-products/10-gouleyant.png" class="image" >
+<h1>Ch.Gouleyant  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/11.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 288</div>
+<img src="https://wangx733.github.io/jogano/1-products/11-laffeur.png" class="image" >
+<h1>Ch.Lafleaur Haut Serre </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 246</div>
+<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<h1>Chateau Bel Air </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/13.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 209</div>
+<img src="https://wangx733.github.io/jogano/1-products/13-barrabaque.png" class="image" >
+<h1>CChateau Barrabaque </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/14.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 299</div>
+<img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
+<h1>Chateau  Bardon la Garelle  </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/18.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 138</div>
+<img src="https://wangx733.github.io/jogano/1-products/18-peyruchet16.png" class="image" >
+<h1>hateau Peyruchet </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 218</div>
+<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<h1>Ch. Beauregard Ducasse blanc2011 </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/20.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 218</div>
+<img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
+<h1>Chateau Beauregard Ducasse2010 </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 208</div>
+<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<h1>Chateau Jalousie </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/24.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 450</div>
+<img src="https://wangx733.github.io/jogano/1-products/24-canteloup.png" class="image" >
+<h1>Chateau Couhins </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/22.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 228</div>
+<img src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png" class="image" >
+<h1>Chateau Semonlon </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/21.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 189</div>
+<img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
+<h1>Chateau La Croix Calendreau </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/23.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 109</div>
+<img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
+<h1>Chateau Tour de Luchey </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/31.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 680</div>
+<img src="https://wangx733.github.io/jogano/1-products/31-meursault-b.png" class="image" >
+<h1>Sylvain LoichetMeusault </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 399</div>
+<img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
+<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+
+<a href="https://wangx733.github.io/jogano/product/.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 595</div>
+<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
+<div class="introo">
+  <h3>14.0%</h3>
+  <h3>Blend</h3>
+  <h3>Bordeaux</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/30.html" class="items">
+  <div class="redwine"></div>
+<div class="pricee">¥ 448</div>
+<img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
+<h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
 <div class="introo">
   <h3>14.0%</h3>
   <h3>Blend</h3>
