new file:   events.html new file:   icon-feiyu.png new file:   icon-wechat.png modified:   jogano.css deleted:    jogano.html modified:   product.html

--- a/product.html
+++ b/product.html
@@ -417,7 +417,30 @@
 </div>
 </a>
 
+
+
+<div class="end-address">
+   NO.970 West Suzhou Road
+   <br>
+ SHANGHAI CHINA
+ <br>
+ 200011
 </div>
+
+<div class="tele">
+  TEL: 51185305
+</div>
+<div class="contact">
+  <a></a>
+  <a></a>
+</div>
+
+
+</div>
+
+
+
+
 
 <script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
   <script type="text/javascript" 
