new file:   event/171226.png modified:   events.html modified:   jogano.css modified:   product.html modified:   product/.DS_Store deleted:    product/2.html renamed:    product/jogano.css -> product/product.css new file:   select.jpg new file:   select.png new file:   taste.jpg new file:   taste.png new file:   visit.jpg new file:   visit.png

--- a/events.html
+++ b/events.html
@@ -48,8 +48,13 @@
 
 <div class="naviline"> </div>
 
+<div class="event-pack">
+  <div class="event-title">
+    <h1>Wine tasting Event</h1>
+  </div>
+<img class="event-pic" scr="">
 
-
+</div>
 
 
 
