--- a/product.html
+++ b/product.html
@@ -431,11 +431,11 @@
   TEL: 51185305
 </div>
 <div class="contact">
-  <a></a>
-  <a></a>
+  <a class="boicon" href="" ><img class="icon" src="https://wangx733.github.io/jogano/icon-wechat.png"></a>
+  <a class="boicon" href="http://m.tb.cn/h.3eUKWsB"> <img class="icon" src="https://wangx733.github.io/jogano/icon-feiyu.png"></a>
 </div>
-
-
+<div class=lastline>© 2018 Isabella Wang<br> </div>
+<div class="padding"></div>
 </div>
 
 
