modified:   events.html modified:   jogano.css

--- a/events.html
+++ b/events.html
@@ -50,10 +50,15 @@
 
 <div class="event-pack">
   <div class="event-title">
-    <h1>Wine tasting Event</h1>
-  </div>
-<img class="event-pic" scr="">
+    <h1 class="left">Wine Tasting </h1>
 
+    <h1 class="lato"><br>24 Dec 2017 14:00</h1>
+  </div>
+<img class="event-pic" scr="https://wangx733.github.io/jogano/event/171226.png">
+<div class="event-detail">
+  Raise your glass and celebrate Christmas. Enjoy an evening with us while tasting wonderful wine and experiencing tasty tapas.
+</div>
+<a href="" class="event-join">Click to join</a>
 </div>
 
 
