modified:   events.html modified:   jogano.css renamed:    product.html -> products.html

--- a/events.html
+++ b/events.html
@@ -8,7 +8,6 @@
 <body>
 
 <div class="navigationblock"></div>
-<div class="apply">FILTER</div>
     <div class="hamburger">&#9776; </div>
     <div class="cross">&#735;</div> 
 <a href="https://wangx733.github.io/jogano/home.html">
@@ -54,7 +53,7 @@
 
     <h1 class="lato"><br>24 Dec 2017 14:00</h1>
   </div>
-<img class="event-pic" scr="https://wangx733.github.io/jogano/event/171226.png">
+<img class="event-pic" src="https://wangx733.github.io/jogano/event/171226.png">
 <div class="event-detail">
   Raise your glass and celebrate Christmas. Enjoy an evening with us while tasting wonderful wine and experiencing tasty tapas.
 </div>
