new file:   deliver.jpg modified:   jogano.css modified:   jogano.html

--- a/jogano.html
+++ b/jogano.html
@@ -47,55 +47,6 @@
 
 <div class="naviline"> </div>
 
-<!--
- Author: Hendry Sadrak
--->
-
-<div class="home-box">
-  <section>
-    <div class="image" data-type="background" data-speed="2"></div>
-    <div class="stuff" data-type="content">
-      <div class="slogen">Best Quality 
-<br>Lowest Price
-</div></div>
-  </section>
-
-  <section>
-    <div class="slogen" data-type="background" data-speed="7"></div>
-    <div class="stuff" data-type="content"><h2>We visit</h2><p>We travel around. Have</p></div>
-  </section>
-
- <section>
-    <div class="slogen" data-type="background" data-speed="7"></div>
-    <div class="stuff" data-type="content"><h2>We taste</h2><p>We travel around. Have</p></div>
-  </section>
-
- <section>
-    <div class="slogen" data-type="background" data-speed="7"></div>
-    <div class="stuff" data-type="content"><h2>We Select</h2><p> Have</p></div>
-  </section>
-  </div>
-
-
-
-
-
-
-
-<div class="home-visit">
-  <img class="home-image2" src="https://wangx733.github.io/jogano/visit.jpg">
-  <img class="home-image1" src="https://wangx733.github.io/jogano/visit.png">
-</div>
-
-<div class="home-taste">
-  <img class="home-image2" src="https://wangx733.github.io/jogano/taste.jpg">
-  <img class="home-image1" src="https://wangx733.github.io/jogano/taste.png">
-</div>
-
-<div class="home-select">
-  <img class="home-image2" src="https://wangx733.github.io/jogano/select.jpg">
-  <img class="home-image1" src="https://wangx733.github.io/jogano/select.png">
-</div>
 
 
 </div>
@@ -103,9 +54,38 @@
 
 <div class="home-box">
 
+<div class="parallax1">
+     <div class="slogen">Best Quality 
+  <br>Lowest Price
+      </div>
+    </div>
+    <div class="overlay">
+      <h5>We Visit</h5>
+      <p>This is an example of how to create a professional parallax scrolling website.</p>
+    </div>
+      <div class="parallax2"></div>
 
-<div class="line1"></div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="relative overlay">
+      <h5 class="lead">We Taste</h5>
+      <p>This is an example of how to create a professional parallax scrolling website.</p>
+    </div>
+ <div class="parallax3"></div>
+
+    <div class="relative overlay">
+      <h5>We Select</h5>
+      <p ">This is an example of how to create a professional parallax scrolling website.</p>
+    </div>
+ <div class="parallax4"></div>
+
+    <div class="relative overlay">
+      <h5>Deliver to your home</h5>
+      <p ">This is an example of how to create a professional parallax scrolling website.</p>
+    </div>
+ <div class="parallax5"></div>
+
+
+
+
 <div class="end-address">
    NO.970 West Suzhou Road
    <br>
