modified:   jogano.css modified:   jogano.html deleted:    select.png deleted:    taste.png new file:   topbar.jpg deleted:    visit.png

--- a/jogano.html
+++ b/jogano.html
@@ -59,8 +59,8 @@
   <br>Lowest Price
       </div>
     </div>
-    <div class="overlay">
-      <h5>We Visit</h5>
+    <div class="overlay1">
+      <h5><br> <br><br><br>We Visit</h5>
       <p>This is an example of how to create a professional parallax scrolling website.</p>
     </div>
       <div class="parallax2"></div>
