modified:   jogano.css modified:   product/1.html modified:   product/product.css modified:   products.html

--- a/product/1.html
+++ b/product/1.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head> <link href="product.css" type="text/css" rel="stylesheet"/>
+<head> <link href="https://wangx733.github.io/jogano/jogano.css" type="text/css" rel="stylesheet"/>
 
  <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,35 +47,35 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="price">￥99</div>
-<div class="p-name">Bachevillain
+<div class="dis-price">￥99</div>
+<div class="dis-p-name">Bachevillain
 
-<div class="alchol">14.0 %</div>
+<div class="dis-alchol">14.0 %</div>
 </div>
-<img class="photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
 
 <a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="tobuy">Click to buy</a>
 
 
 
-<div class="grape">
-	<img class="icon" src="https://wangx733.github.io/jogano/icon-grape.png">
+<div class="dis-grape">
+	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
-<div class="grapenum">
+<div class="dis-grapenum">
 83% <br>
 14% <br>
 3% 
 <br>
 	
-    <div class="region-description">
-    	<img class="icon" src="https://wangx733.github.io/jogano/icon-region.png">
+    <div class="dis-region-description">
+    	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
         Bordeaux</div>
 <br>
 	
-	<div class="pair-description">
-		<img class="icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
+	<div class="dis-pair-description">
+		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
 		Beef, Veal, Game (deer, venison), Poultry
-		<div class="notes">
+		<div class="dis-notes">
 	<h2>Notes</h2>
 A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
 <br><br><br><br>
@@ -86,7 +86,7 @@ A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensa
 	</div>
 </div>
 
-<div class="grapecompo">
+<div class="dis-grapecompo">
 	Merlot<br>
 Cabernet Sauvignon<br>
 Cabernet Franc</div>
