--- a/products.html
+++ b/products.html
@@ -245,7 +245,7 @@
 <a href="https://wangx733.github.io/jogano/product/.html" class="items">
   <div class="redwine"></div>
 <div class="pricee">¥ 246</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/49-bel.png" class="image" >
 <h1>Chateau Bel Air </h1>
 <div class="introo">
   <h3>14.0%</h3>
@@ -258,7 +258,7 @@
   <div class="redwine"></div>
 <div class="pricee">¥ 209</div>
 <img src="https://wangx733.github.io/jogano/1-products/13-barrabaque.png" class="image" >
-<h1>CChateau Barrabaque </h1>
+<h1>Chateau Barrabaque </h1>
 <div class="introo">
   <h3>14.0%</h3>
   <h3>Blend</h3>
