modified:   product/1.html new file:   product/jogano.css deleted:    product/product.css

--- a/product/1.html
+++ b/product/1.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
-<head> <link href="https://wangx733.github.io/jogano/jogano.css" type="text/css" rel="stylesheet"/>
+<head> <link href="jogano.css" type="text/css" rel="stylesheet"/>
 
  <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div class="navigationblock"></div>
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
     
@@ -50,11 +50,11 @@
 <div class="dis-price">￥99</div>
 <div class="dis-p-name">Bachevillain
 
-<div class="dis-alchol">14.0 %</div>
+<div class="dis-alchol">14.0%</div>
 </div>
 <img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
 
 
 
